--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,10 @@
 <title>Benvenuto</title>
 </head>
 <body>
+	<ul>
+		<li><a th:href="@{/movies}">Movies</a></li>
+		<li><a th:href="@{/songs}">Songs</a></li>
+	</ul>
 	<h1 th:text="'Best of the year by ' + ${name}"></h1>
 </body>
 </html>
