--- a/src/main/resources/templates/song.html
+++ b/src/main/resources/templates/song.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
 <title>Single Song</title>
 </head>
 <body>
-<h1>Pagina dettaglio song</h1>
-
+	<h1>Pagina dettaglio song con id: [[${song.id}]]</h1>
+	<h2>[[${song.name}]]</h2>
 </body>
 </html>
