--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
 <title>Single Movie</title>
 </head>
 <body>
-<h1>Pagina dettaglio movie</h1>
-
+	<h1>Pagina dettaglio movie con id: [[${movie.id}]]</h1>
+	<h2>[[${movie.name}]]</h2>
 </body>
 </html>
