--- a/src/main/resources/templates/song.html
+++ b/src/main/resources/templates/song.html
@@ -2,10 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
+<div th:replace="~{fragments :: head_bootstrap}"></div>
 <title>Single Song</title>
 </head>
 <body>
+	<div th:replace="~{fragments :: navbar('songs')}"></div>
 	<h1>Pagina dettaglio song con id: [[${song.id}]]</h1>
 	<h2>[[${song.name}]]</h2>
+	<div th:replace="~{fragments :: script}"></div>
 </body>
 </html>
