--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
+<div th:replace="~{fragments :: head_bootstrap}"></div>
 <title>Benvenuto</title>
 </head>
 <body>
-	<ul>
-		<li><a th:href="@{/movies}">Movies</a></li>
-		<li><a th:href="@{/songs}">Songs</a></li>
-	</ul>
+	<div th:replace="~{fragments :: navbar('/')}"></div>
 	<h1 th:text="'Best of the year by ' + ${name}"></h1>
+	<div th:replace="~{fragments :: script}"></div>
 </body>
 </html>
