--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -2,10 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
+<div th:replace="~{fragments :: head_bootstrap}"></div>
 <title>Single Movie</title>
 </head>
 <body>
+	<div th:replace="~{fragments :: navbar('movies')}"></div>
 	<h1>Pagina dettaglio movie con id: [[${movie.id}]]</h1>
 	<h2>[[${movie.name}]]</h2>
+	<div th:replace="~{fragments :: script}"></div>
 </body>
 </html>
