--- a/src/main/resources/templates/songs.html
+++ b/src/main/resources/templates/songs.html
@@ -2,19 +2,24 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
+<div th:replace="~{fragments :: head_bootstrap}"></div>
 <title>Songs</title>
 </head>
 <body>
-	<ul>
-		<li><a th:href="@{/}">Home</a></li>
-		<li><a th:href="@{/movies}">Movies</a></li>
-		<li><a th:href="@{/songs}">Songs</a></li>
-	</ul>
+	<!-- 	<ul> -->
+	<!-- 		<li><a th:href="@{/}">Home</a></li> -->
+	<!-- 		<li><a th:href="@{/movies}">Movies</a></li> -->
+	<!-- 		<li><a th:href="@{/songs}">Songs</a></li> -->
+	<!-- 	</ul> -->
+
+	<div th:replace="~{fragments :: navbar('songs')}"></div>
 	<h1>Song list</h1>
-	
+
 	<!-- 	<p th:text="${songs}"></p> -->
 	<ul th:each="song : ${songs}">
-		<li><a th:href="@{/songs/{id}(id=${song.id})}"> [[${song.name}]] </a></li>
+		<li><a th:href="@{/songs/{id}(id=${song.id})}">
+				[[${song.name}]] </a></li>
 	</ul>
+	<div th:replace="~{fragments :: script}"></div>
 </body>
 </html>
